# SketchScript

./: .gitignore  README.md  cabal.project  components.json  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  requirements.org  tailwind.config.js  tsconfig.base.json  tsconfig.json
.github/ISSUE_TEMPLATE/: 01-ADR.yml  02-GENERAL.yml  03-BUG-REPORT.yml
.github/workflows/: build.yml
apps/api/: LICENSE  api.cabal  cabal.project.freeze  project.json
apps/api/app/: Main.hs
apps/api/src/App/: Server.hs
apps/api/src/Auth/: Config.hs  Handler.hs  Server.hs
apps/api/src/File/: DB.hs  Handler.hs  Server.hs  Types.hs
apps/api/src/Project/: DB.hs  Handler.hs  Server.hs
apps/api/src/S3/: Handler.hs  Server.hs
apps/api/src/Shared/: ServerResponses.hs  Utils.hs
apps/api/src/User/: Api.hs  DB.hs  Handler.hs  Server.hs
apps/api/src/Workspace/: DB.hs
apps/docs/: README.md  netlify.toml  package.json  pnpm-lock.yaml  project.json  react-router.config.ts  vite.config.ts
apps/docs/app/docs/: page.tsx
apps/docs/app/routes/: home.tsx
apps/docs/content/docs/: meta.json  quick-start.mdx  roadmap.mdx
apps/docs/src/app/: layout.config.tsx
apps/sandbox/: package.json  project.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/sandbox-e2e/: playwright.config.ts
apps/sandbox/app/: app.css  app.tsx  root.tsx
apps/sandbox/app/routes/: login.tsx
apps/sketchscript-core/: CHANGELOG.md  cabal.project.freeze  project.json  sketchscript-core.cabal
apps/sketchscript-core/src/: Main.hs  SketchScriptTypes.hs  Types.hs
apps/sketchscript-core/src/Parser/: Common.hs  Element.hs  Script.hs  Style.hs  Widget.hs
apps/sketchscript-runtime/: CHANGELOG.md  LICENSE  project.json  sketchscript-runtime.cabal
apps/sketchscript-runtime/server/: Main.hs
apps/sketchscript-runtime/src/CodeGenerators/: Element.hs  Utils.hs  Widget.hs
apps/website/: netlify.toml  package.json  project.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/website-e2e/: playwright.config.ts
apps/website/app/: app.css  app.tsx  root.tsx
backup/: index.mdx
backup/contribution-guidelines/: code-style.mdx  git.mdx  index.mdx  meta.json  testing.mdx
backup/learning/: index.mdx  meta.json
infrastructure/terraform/: main.tf
libs/db/: diagram.puml  project.json  schema.sql
libs/sandbox/: project.json  tsconfig.json
libs/sandbox/api/: files.ts  projects.ts
libs/sandbox/features/code-editor/: index.ts  types.ts  util.ts
libs/sandbox/features/login/: index.ts
libs/sandbox/models/: file.ts  project.ts  user.ts  workspace.ts
libs/sandbox/shared/: axiosInstance.ts  index.ts  useDebounceHook.ts
libs/sandbox/stores/: index.ts  themeSlice.ts  userSlice.ts  workspaceSlice.ts
libs/shared/: project.json  tsconfig.json
libs/shared/ui/: accordion.tsx  button.tsx  card.tsx  dropdown-menu.tsx  skeleton.tsx  tabs.tsx
libs/shared/utils/: index.ts  theme-provider.tsx  theme-toggle.tsx
libs/website/: project.json  tsconfig.json  tsconfig.lib.json
libs/website/components/cta/: cta.constants.tsx  index.tsx
libs/website/components/demo/: demo.constants.ts  index.tsx
libs/website/components/features/: features.constants.ts  index.tsx
(+31 files in other folders)
