cabal-version: 3.0
name: sketchscript-runtime
version: 0.1.0.0
synopsis: A runtime library for SketchScript, a language for creating interactive sketches. This library provides the core functionality needed to generate HTML from an AST.
-- description:
homepage: https://docs.sketchscript.dev
license: BSD-3-Clause
license-file: LICENSE
author: HasithDeAlwis
maintainer: hasithde24@gmail.com
-- copyright:
category: Language
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

executable sketchscript-runtime
  -- Import common warning flags.
  import: warnings
  -- .hs or .lhs file containing the Main module.
  main-is: Main.hs
  -- Modules included in this executable, other than Main.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  -- Other library packages from which modules are imported.
  build-depends:
    aeson,
    amazonka >=2.0 && <2.1,
    amazonka-core,
    amazonka-s3,
    base ^>=4.18.3.0,
    base >=4.18.3.0 && <5,
    bytestring,
    conduit,
    conduit-extra,
    dotenv,
    generic-lens,
    lens,
    scotty,
    sketchscript-core,
    sketchscript-runtime,
    http-types,
    transformers,
    text,
    wai-extra,

  -- Directories containing source files.
  hs-source-dirs: server
  -- Base language which the package is written in.
  default-language: Haskell2010

library
  import: warnings
  exposed-modules:
    CodeGenerators.Element

  other-modules:
    CodeGenerators.Utils
    CodeGenerators.Widget

  -- other-extensions:
  build-depends:
    aeson,
    amazonka >=2.0 && <2.1,
    amazonka-s3,
    base ^>=4.18.3.0,
    bytestring,
    lens,
    scotty,
    sketchscript-core,
    text,
    wai-extra,

  hs-source-dirs: src
  default-language: Haskell2010

test-suite sketchscript-runtime-test
  import: warnings
  default-language: Haskell2010
  -- other-modules:
  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: base ^>=4.18.3.0